@@ -1,3 +1,9 @@
+2012-01-27  Vida Gábor  <vidagabor@gmail.com>  (tiny change)
+
+	* gnus-demon.el (gnus-demon-run-callback, gnus-demon-init): Convert to
+	seconds, and make the repeat clause with HH:MM specs work as
+	documented.
+
 2012-01-27  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* proto-stream.el (proto-stream-capability-open): Fall back on
